--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="tabs">
+        <button>Home</button>
+        <button>Menu</button>
+        <button>About</button>
+      </nav>
+    </header>
+    <div id="content">Hello!</div>
+  </body>
 </html>
