Create a template for the main page

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,22 @@
         <button>About</button>
       </nav>
     </header>
-    <div id="content">Hello!</div>
+    <div id="content">
+      <div class="content-box">
+        <h1><em>The</em> Snack Restaurant</h1>
+      </div>
+      <div class="content-box">
+        <p>
+          Out restaurant presents all known yet more flavourful snacks to try
+          for everyone! The first guests of the day receive a <em>bonus</em>!
+        </p>
+      </div>
+      <div class="content-box flex-column">
+        <h2>Hours</h2>
+        <p>Mon-Fri: 10am - 10pm</p>
+        <p>Sat: 10am-6pm</p>
+        <p>Sun: <em>Day off</em></p>
+      </div>
+    </div>
   </body>
 </html>
