--- a/src/template.html
+++ b/src/template.html
@@ -19,14 +19,14 @@
       </div>
       <div class="content-box">
         <p>
-          Out restaurant presents all known yet more flavourful snacks to try
+          Our restaurant presents all known yet more flavourful snacks to try
           for everyone! The first guests of the day receive a <em>bonus</em>!
         </p>
       </div>
       <div class="content-box flex-column">
         <h2>Hours</h2>
         <p>Mon-Fri: 10am - 10pm</p>
-        <p>Sat: 10am-6pm</p>
+        <p>Sat: 10am-6p</p>
         <p>Sun: <em>Day off</em></p>
       </div>
     </div>
