Add the default picture to the home page

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
       <div class="content-box">
         <h1><em>The</em> Snack Restaurant</h1>
       </div>
+      <img src="./public/restaurant_default.svg" alt="default picture" />
       <div class="content-box">
         <p>
           Our restaurant presents all known yet more flavourful snacks to try
