Make a menu page template

--- a/src/template.html
+++ b/src/template.html
@@ -14,21 +14,58 @@
       </nav>
     </header>
     <div id="content">
+      <h1 class="content-box flex-column align-center"><em>Menu</em></h1>
       <div class="content-box">
-        <h1><em>The</em> Snack Restaurant</h1>
+        <div class="menu-card flex-row align-center">
+          <div class="menu-option-desc">
+            <h2>Caesar Salad</h2>
+            <p>
+              A classic combination of crisp romaine lettuce and golden
+              croutons, tossed in a creamy dressing made with lemon juice, olive
+              oil, eggs, Worcestershire sauce, anchovies, garlic, Dijon mustard,
+              and freshly ground black pepper. Finished with a generous shaving
+              of Parmesan cheese for a rich and savory touch.
+            </p>
+          </div>
+          <img src="./public/caesar_salad.jpg" alt="Caesar salad picture" />
+        </div>
       </div>
-      <img src="./public/restaurant_default.svg" alt="default_picture" />
       <div class="content-box">
-        <p>
-          Our restaurant presents all known yet more flavourful snacks to try
-          for everyone! The first guests of the day receive a <em>bonus</em>!
-        </p>
+        <div class="menu-card flex-row align-center">
+          <img src="./public/venice_salad.jpg" alt="Venice salad picture" />
+          <div class="menu-option-desc">
+            <h2>Venice Salad</h2>
+            <p>
+              A classic combination of crisp romaine lettuce and golden
+              croutons, tossed in a creamy dressing made with lemon juice, olive
+              oil, eggs, Worcestershire sauce, anchovies, garlic, Dijon mustard,
+              and freshly ground black pepper. Finished with a generous shaving
+              of Parmesan cheese for a rich and savory touch.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="content-box flex-column">
-        <h2>Hours</h2>
-        <p>Mon-Fri: 10am - 10pm</p>
-        <p>Sat: 10am-6p</p>
-        <p>Sun: <em>Day off</em></p>
+      <div class="content-box">
+        <div class="menu-card flex-row align-center">
+          <div class="menu-option-desc">
+            <h2>Mediterranean Quinoa Salad</h2>
+            <p>
+              A hearty and nutritious salad featuring fluffy quinoa as the base,
+              mixed with diced cucumbers, cherry tomatoes, Kalamata olives, red
+              onion, and fresh parsley. Finished with crumbled feta cheese, a
+              sprinkle of oregano, and a light dressing made from extra virgin
+              olive oil, lemon juice, garlic, and a hint of mint for an
+              authentic Mediterranean flair.
+            </p>
+          </div>
+          <img
+            src="./public/quinoa_salad.jpg"
+            alt="Mediterranean Quinoa salad picture"
+          />
+        </div>
+      </div>
+      <div class="content-box flex-column align-center">
+        <h2>And much more!</h2>
       </div>
     </div>
   </body>
