Change the grid layout method

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="tabs-header">
       <nav class="tabs">
         <button class="btn-home">Home</button>
         <button class="btn-menu">Menu</button>
