Set the default site state on visit/refresh

--- a/src/template.html
+++ b/src/template.html
@@ -13,15 +13,6 @@
         <button class="btn-contact">Contact</button>
       </nav>
     </header>
-    <div id="content">
-      <h1 class="content-box flex-column align-center"><em>Contact</em></h1>
-      <div class="content-box flex-column align-center">
-        <p>
-          For more information about the menu and prices, please contact us!
-        </p>
-        <p>Phone number: +1234567890</p>
-        <p>Email: saladrestmail@mail.com</p>
-      </div>
-    </div>
+    <div id="content"></div>
   </body>
 </html>
